# humotion-hai16-startup

./: CMakeLists.txt  README.md  humotion-hai16-base.sh.in  humotion-hai16-config.sh.in  humotion-hai16-env-local.sh.in  humotion-hai16-env.sh.in  humotion-hai16-localhost.sh.in  humotion-hai16.sh.in  vdemo_aux_functions.sh
component_scripts/: component_dynamic_reconfigure  component_hlrc_demo_animation  component_hlrc_server  component_hlrc_test_gui  component_icub_faceexpressions  component_icub_humotion  component_icub_robotmotorgui  component_icubinterface  component_icubsim  component_icubsim_faceexpressions  component_icubsim_faceexpressions_connect  component_mary_server  component_mary_tts_provider  component_roscore  component_yarpserver
demo/: hlrc_demo_animation.py
